fixed text wrap

--- a/css/style.css
+++ b/css/style.css
@@ -330,28 +330,26 @@ footer p {
 }
 
 .bio {
-  grid-column: 4 / span 5;
-  grid-row: 3 / span 2;
-  margin-top: 3rem;
-  padding-right: 2rem;
-}
-
-.bio-wide {
-  grid-column: 4 / span 7;
-  grid-row: 4 / span 5;
+  grid-column: 4 / span 8;
+  grid-row: 2 / span 6;
   margin-top: 3rem;
 }
 
-.bio p,
-.bio-wide p {
+.bio p {
   line-height: 150%;
+}
+
+.bio-text {
+  padding-top: 10rem;
+  padding-right: 12rem;
 }
 
 .selfie {
   width: 23rem;
   height: auto;
-  grid-column: 9 / span 2;
-  grid-row: 2 / span 3;
+  float: right;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 /*contact page*/
